--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AWSSDK.CloudFormation" version="3.3.13.4" targetFramework="net461" />
   <package id="AWSSDK.Core" version="3.3.29.16" targetFramework="net461" />
+  <package id="AWSSDK.Lambda" version="3.3.19.4" targetFramework="net461" />
 </packages>
