--- a/heaven.csproj
+++ b/heaven.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ResourceLister.cs" />
     <Compile Include="AppLogger.cs" />
     <Compile Include="AWSObject.cs" />
+    <Compile Include="AWSAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
