--- a/heaven.csproj
+++ b/heaven.csproj
@@ -88,13 +88,17 @@
     <Compile Include="ResourceLister.cs" />
     <Compile Include="AppLogger.cs" />
     <Compile Include="AWSObject.cs" />
-    <Compile Include="AWSAPI.cs" />
+    <Compile Include="APIs\AWSAPI.cs" />
+    <Compile Include="APIs\AWSLambdaAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="packages\AWSSDK.CloudFormation.3.3.13.4\analyzers\dotnet\cs\AWSSDK.CloudFormation.CodeAnalysis.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="APIs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
