--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,6 @@
   <package id="AWSSDK.CloudFormation" version="3.3.13.4" targetFramework="net461" />
   <package id="AWSSDK.Core" version="3.3.29.16" targetFramework="net461" />
   <package id="AWSSDK.Lambda" version="3.3.19.4" targetFramework="net461" />
+  <package id="AWSSDK.S3" version="3.3.31.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
 </packages>
