--- a/heaven.csproj
+++ b/heaven.csproj
@@ -61,6 +61,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCredentials.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCredentials.Designer.cs">
+      <DependentUpon>FormCredentials.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCredentials.resx">
+      <DependentUpon>FormCredentials.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
