--- a/CloudOps/CloudOps.csproj
+++ b/CloudOps/CloudOps.csproj
@@ -31,12 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\packages\AWSSDK.Core.3.3.30.2\lib\net45\AWSSDK.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="AWSSDK.Lambda, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\packages\AWSSDK.Lambda.3.3.19.6\lib\net45\AWSSDK.Lambda.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,10 +47,14 @@
     <Compile Include="Scanner.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\AWSSDK.Lambda.3.3.19.6\analyzers\dotnet\cs\AWSSDK.Lambda.CodeAnalysis.dll" />
+    <ProjectReference Include="..\aws-sdk-net\sdk\src\Core\AWSSDK.Core.Net45.csproj">
+      <Project>{0742b90b-4f9c-47c1-a1f3-c59434987f98}</Project>
+      <Name>AWSSDK.Core.Net45</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\aws-sdk-net\sdk\src\Services\Lambda\AWSSDK.Lambda.Net45.csproj">
+      <Project>{d1b90855-5c87-41dd-a4a2-8e93ab8370cd}</Project>
+      <Name>AWSSDK.Lambda.Net45</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
