--- a/heaven.csproj
+++ b/heaven.csproj
@@ -118,21 +118,9 @@
     <None Include="heaven-small.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="aws-sdk-net\sdk\src\Core\AWSSDK.Core.Net45.csproj">
-      <Project>{0742b90b-4f9c-47c1-a1f3-c59434987f98}</Project>
-      <Name>AWSSDK.Core.Net45</Name>
-    </ProjectReference>
-    <ProjectReference Include="aws-sdk-net\sdk\src\Services\EC2\AWSSDK.EC2.Net45.csproj">
-      <Project>{fea0a9ac-ab10-420e-be66-673bd43f2b67}</Project>
-      <Name>AWSSDK.EC2.Net45</Name>
-    </ProjectReference>
-    <ProjectReference Include="aws-sdk-net\sdk\src\Services\Lambda\AWSSDK.Lambda.Net45.csproj">
-      <Project>{d1b90855-5c87-41dd-a4a2-8e93ab8370cd}</Project>
-      <Name>AWSSDK.Lambda.Net45</Name>
-    </ProjectReference>
-    <ProjectReference Include="aws-sdk-net\sdk\src\Services\S3\AWSSDK.S3.Net45.csproj">
-      <Project>{2ae044cf-ccb4-4d72-a6d4-df5b6cd0b346}</Project>
-      <Name>AWSSDK.S3.Net45</Name>
+    <ProjectReference Include="CloudOps\CloudOps.csproj">
+      <Project>{38dc0e7f-af8d-4a2e-8e7e-e42e3839d2bb}</Project>
+      <Name>CloudOps</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
