--- a/heaven.csproj
+++ b/heaven.csproj
@@ -75,6 +75,15 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProfiles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProfiles.Designer.cs">
+      <DependentUpon>FormProfiles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Profile.cs" />
+    <Compile Include="ProfileOperation.cs" />
+    <Compile Include="ProfileService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAbout.resx">
@@ -85,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProfiles.resx">
+      <DependentUpon>FormProfiles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -112,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="heaven-2027161_960_720.jpg" />
+    <None Include="images\icons8-term-50.png" />
     <None Include="images\icons8-private-50.png" />
     <None Include="images\icons8-save-50.png" />
     <None Include="images\icons8-output-50.png" />
