--- a/heaven.csproj
+++ b/heaven.csproj
@@ -36,6 +36,12 @@
     <Reference Include="Highlight, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Highlight.4.0.0\lib\net40\Highlight.dll</HintPath>
     </Reference>
+    <Reference Include="KellermanSoftware.Compare-NET-Objects, Version=4.57.0.0, Culture=neutral, PublicKeyToken=d970ace04cc85217, processorArchitecture=MSIL">
+      <HintPath>packages\CompareNETObjects.4.57.0\lib\net46\KellermanSoftware.Compare-NET-Objects.dll</HintPath>
+    </Reference>
+    <Reference Include="Polenter.SharpSerializer, Version=3.0.1.0, Culture=neutral, PublicKeyToken=8f4f20011571ee5f, processorArchitecture=MSIL">
+      <HintPath>packages\SharpSerializer.3.0.1\lib\net452\Polenter.SharpSerializer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,6 +63,7 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppSerializer.cs" />
     <Compile Include="FormAbout.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +88,12 @@
     <Compile Include="FormProfiles.Designer.cs">
       <DependentUpon>FormProfiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRun.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRun.Designer.cs">
+      <DependentUpon>FormRun.cs</DependentUpon>
+    </Compile>
     <Compile Include="OperationControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -91,6 +104,11 @@
     <Compile Include="ProfileRecord.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="RegionsString.cs" />
     <Compile Include="RegionsTextbox.cs">
       <SubType>UserControl</SubType>
@@ -110,19 +128,17 @@
     <EmbeddedResource Include="FormProfiles.resx">
       <DependentUpon>FormProfiles.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormRun.resx">
+      <DependentUpon>FormRun.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OperationControl.resx">
       <DependentUpon>OperationControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="RegionsTextbox.resx">
       <DependentUpon>RegionsTextbox.cs</DependentUpon>
     </EmbeddedResource>
@@ -142,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="heaven-2027161_960_720.jpg" />
+    <None Include="images\icons8-repeat-one-50.png" />
     <None Include="images\icons8-menu-23.png" />
     <None Include="images\icons8-menu-32.png" />
     <None Include="images\icons8-term-50.png" />
@@ -169,6 +186,9 @@
       <Project>{38dc0e7f-af8d-4a2e-8e7e-e42e3839d2bb}</Project>
       <Name>CloudOps</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
