--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CompareNETObjects" version="4.57.0" targetFramework="net461" />
   <package id="Highlight" version="4.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="SharpSerializer" version="3.0.1" targetFramework="net461" />
 </packages>
