--- a/App.config
+++ b/App.config
@@ -1,14 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="heaven.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        </sectionGroup>
+    </configSections>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>  
   <runtime>  
        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">  
             <dependentAssembly>  
-                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />  
-                 <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />  
+                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>  
+                 <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>  
+            </dependentAssembly>  
+            <dependentAssembly>  
+                 <assemblyIdentity name="SQLitePCLRaw.core" publicKeyToken="1488e028ca7ab535" culture="neutral"/>  
+                 <bindingRedirect oldVersion="0.0.0.0-1.1.12.351" newVersion="1.1.12.351"/>  
+            </dependentAssembly>  
+            <dependentAssembly>  
+                 <assemblyIdentity name="SQLitePCLRaw.batteries_v2" publicKeyToken="8226ea5df37bcae9" culture="neutral"/>  
+                 <bindingRedirect oldVersion="0.0.0.0-1.1.12.351" newVersion="1.1.12.351"/>  
             </dependentAssembly>  
        </assemblyBinding>  
   </runtime>
+  <userSettings>
+    <heaven.Properties.Settings>
+      <setting name="AccessKeyID" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="SecretAccessKey" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="PageSize" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="ConcurrentConnecitons" serializeAs="String">
+        <value>15</value>
+      </setting>
+      <setting name="Timeout" serializeAs="String">
+        <value>900000</value>
+      </setting>
+    </heaven.Properties.Settings>
+  </userSettings>
 </configuration>
